Bug 1343664 - Part 1. Correct transform matrix. r=mstange

MozReview-Commit-ID: Eg6i4SoSPoe

--HG--
extra : rebase_source : d2a5dea5d614e56e673828eb7bd91f736309b8cc